# cMergeSortParallel

./: .gitignore  CMakeLists.txt  Makefile  README.md  arrayTestFile  fichier_test  fichier_test2  speedTest.sh  trashtestfil
.github/: labeler.yml
.github/workflows/: c-cpp.yml  cmake.yml  codeql.yml
BuildMakeFile/: OpenMpVersion  PThreadVersion  SquentialVersion  fileGenerator  mergeSortOpenMp  mergeSortPThread  mergeSortSequential  outputOpenMp  outputSeq  readme.txt  resultOpenMp  resultPthread  resultSequential
CommonFunctions/: sortFunctions.h
OpenMpVersion/: CMakeLists.txt  d2omp.c
PThreadVersion/: CMakeLists.txt  d2p.c
ParallelProgramming/: CMakeLists.txt  d2s.c
buildMakeFile/: fichier_test  fileGenerator  mergeSortOpenMp  mergeSortPThread  mergeSortSequential  outputOpenMp  outputPThread  outputSeq
commonFunctions/: commonFunctions.c  commonFunctions.h
fileGenerator/: CMakeLists.txt  fileGenerator.c  fileGenerator.sh  fileGeneratorExe.c  main.c
mergeSortOpenMP/: CMakeLists.txt  d2omp.c  d2omp_v2.c  new_ver.c  resultat
mergeSortOpenMp/: CMakeLists.txt  d2omp.c  main.c  mergeSortParallelOpenMp.c  mergeSortParallelOpenMp.h
mergeSortPThread/: CMakeLists.txt  d2p.c  d2p_new.c  fileGenerator  main.c  mergeSortParallelPThread.c  mergeSortParallelPThread.h  resultat
mergeSortSequential/: CMakeLists.txt  d2s.c  d2s_other.c  d2s_v2.c  main.c  mergeSortSequential.c  mergeSortSequential.h  resultat
sequentialVersion/: CMakeLists.txt  d2s.c  d2s_old.c  resultat
speedTest/: fileGenerator.sh  multithreads_comparaisons.csv  multithreads_comparaisons.xlsx  multithreads_comparaisons_v2.xlsx  speedTest.sh
speedTest/outputs/: mergeSortOpenMp_1000000_1.txt  mergeSortOpenMp_1000000_16.txt  mergeSortOpenMp_1000000_2.txt  mergeSortOpenMp_1000000_24.txt  mergeSortOpenMp_1000000_4.txt  mergeSortOpenMp_1000000_48.txt  mergeSortOpenMp_1000000_8.txt  mergeSortOpenMp_100000_1.txt  mergeSortOpenMp_100000_16.txt  mergeSortOpenMp_100000_2.txt  mergeSortOpenMp_100000_24.txt  mergeSortOpenMp_100000_4.txt  mergeSortOpenMp_100000_48.txt  mergeSortOpenMp_100000_8.txt  mergeSortOpenMp_10000_1.txt  mergeSortOpenMp_10000_16.txt  mergeSortOpenMp_10000_2.txt  mergeSortOpenMp_10000_24.txt  mergeSortOpenMp_10000_4.txt  mergeSortOpenMp_10000_48.txt  mergeSortOpenMp_10000_8.txt  mergeSortOpenMp_1000_1.txt  mergeSortOpenMp_1000_16.txt  mergeSortOpenMp_1000_2.txt  mergeSortOpenMp_1000_24.txt  mergeSortOpenMp_1000_4.txt  mergeSortOpenMp_1000_48.txt  mergeSortOpenMp_1000_8.txt  mergeSortOpenMp_100_1.txt  mergeSortOpenMp_100_16.txt  mergeSortOpenMp_100_2.txt  mergeSortOpenMp_100_24.txt  mergeSortOpenMp_100_4.txt  mergeSortOpenMp_100_48.txt  mergeSortOpenMp_100_8.txt  mergeSortOpenMp_10_1.txt  mergeSortOpenMp_10_16.txt  mergeSortOpenMp_10_2.txt  mergeSortOpenMp_10_24.txt  mergeSortOpenMp_10_4.txt  (+83 more)
speedTest/speedTestArrays/: array_10.txt  array_100.txt  array_1000.txt  array_10000.txt  array_100000.txt  readme.txt
test/: CMakeLists.txt  mergeSortOpenMPTest.c  mergeSortPThreadTest.c  mergeSortParallelOpenMpTest.c  mergeSortParallelPThreadTest.c  mergeSortSequentialTest.c  mergeSortTest.c  sortFunctions.h
